--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -16,20 +16,10 @@ jobs:
 
       - name: ha-ha
         uses: ./.github/actions/joke-action
-        
-# name: "JS Actions"
+        id: jokes
 
-# on: [push]
-
-# jobs:
-#   action:
-#     runs-on: "ubuntu-latest"
-#     steps:
-#       - uses: actions/checkout@v1
-
-#       - name: "hello-action"
-#         uses: ./.github/actions/hello-world
-#         with:
-#           first-greeting: "Learning Lab User"
-#           second-greeting: "Mona Mona"
-#           third-greeting: "Mona The Third"
+      - name: create-issue
+        uses: ./.github/actions/issue-maker
+        with:
+          repo-token: ${{secrets.GITHUB_TOKEN}}
+          joke: ${{steps.jokes.outputs.joke-output}}
